// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render AnswersOptions and selected radio button 1`] = `
<View>
  <View
    style={
      [
        undefined,
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F0F0F0",
            "borderColor": "#CCD2E3",
            "borderRadius": 15,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 20,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 14,
            "width": 300,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "marginRight": 18,
            },
          ]
        }
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "center",
                "borderColor": "#49454F",
                "borderRadius": 12.5,
                "borderWidth": 3,
                "height": 25,
                "justifyContent": "center",
                "opacity": 1,
                "width": 25,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 10,
                  },
                  false,
                  false,
                  false,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "lineHeight": 20,
                "paddingLeft": 10,
              },
              {
                "paddingLeft": 0,
              },
              {
                "color": undefined,
              },
              {
                "fontFamily": "Montserrat-Regular",
                "fontSize": 16,
              },
            ]
          }
        >
          one
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F0F0F0",
            "borderColor": "#CCD2E3",
            "borderRadius": 15,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 20,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 14,
            "width": 300,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "marginRight": 18,
            },
          ]
        }
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "center",
                "borderColor": "#49454F",
                "borderRadius": 12.5,
                "borderWidth": 3,
                "height": 25,
                "justifyContent": "center",
                "opacity": 1,
                "width": 25,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 10,
                  },
                  false,
                  false,
                  false,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "lineHeight": 20,
                "paddingLeft": 10,
              },
              {
                "paddingLeft": 0,
              },
              {
                "color": undefined,
              },
              {
                "fontFamily": "Montserrat-Regular",
                "fontSize": 16,
              },
            ]
          }
        >
          two
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F0F0F0",
            "borderColor": "#CCD2E3",
            "borderRadius": 15,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 20,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 14,
            "width": 300,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "marginRight": 18,
            },
          ]
        }
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "center",
                "borderColor": "#49454F",
                "borderRadius": 12.5,
                "borderWidth": 3,
                "height": 25,
                "justifyContent": "center",
                "opacity": 1,
                "width": 25,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 10,
                  },
                  false,
                  false,
                  false,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "lineHeight": 20,
                "paddingLeft": 10,
              },
              {
                "paddingLeft": 0,
              },
              {
                "color": undefined,
              },
              {
                "fontFamily": "Montserrat-Regular",
                "fontSize": 16,
              },
            ]
          }
        >
          three
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Should render AnswersOptions and selected radio button 2`] = `
<View>
  <View
    style={
      [
        undefined,
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F0F0F0",
            "borderColor": "#CCD2E3",
            "borderRadius": 15,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 20,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 14,
            "width": 300,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "marginRight": 18,
            },
          ]
        }
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "center",
                "borderColor": "#6B9DE9",
                "borderRadius": 12.5,
                "borderWidth": 3,
                "height": 25,
                "justifyContent": "center",
                "opacity": 1,
                "width": 25,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 10,
                  },
                  {
                    "backgroundColor": "#2196f3",
                    "height": 20,
                    "width": 20,
                  },
                  {
                    "borderRadius": 7.5,
                    "height": 15,
                    "width": 15,
                  },
                  {
                    "backgroundColor": "#2196f3",
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "lineHeight": 20,
                "paddingLeft": 10,
              },
              {
                "paddingLeft": 0,
              },
              {
                "color": undefined,
              },
              {
                "fontFamily": "Montserrat-Regular",
                "fontSize": 16,
              },
            ]
          }
        >
          one
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F0F0F0",
            "borderColor": "#CCD2E3",
            "borderRadius": 15,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 20,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 14,
            "width": 300,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "marginRight": 18,
            },
          ]
        }
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "center",
                "borderColor": "#49454F",
                "borderRadius": 12.5,
                "borderWidth": 3,
                "height": 25,
                "justifyContent": "center",
                "opacity": 1,
                "width": 25,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 10,
                  },
                  false,
                  false,
                  false,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "lineHeight": 20,
                "paddingLeft": 10,
              },
              {
                "paddingLeft": 0,
              },
              {
                "color": undefined,
              },
              {
                "fontFamily": "Montserrat-Regular",
                "fontSize": 16,
              },
            ]
          }
        >
          two
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F0F0F0",
            "borderColor": "#CCD2E3",
            "borderRadius": 15,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 20,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 14,
            "width": 300,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "marginRight": 18,
            },
          ]
        }
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "center",
                "borderColor": "#49454F",
                "borderRadius": 12.5,
                "borderWidth": 3,
                "height": 25,
                "justifyContent": "center",
                "opacity": 1,
                "width": 25,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 10,
                  },
                  false,
                  false,
                  false,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "lineHeight": 20,
                "paddingLeft": 10,
              },
              {
                "paddingLeft": 0,
              },
              {
                "color": undefined,
              },
              {
                "fontFamily": "Montserrat-Regular",
                "fontSize": 16,
              },
            ]
          }
        >
          three
        </Text>
      </View>
    </View>
  </View>
</View>
`;
